# coreos-metadata

./: Cargo.toml
src/: lib.rs
src/providers/: mod.rs
src/retry/: client.rs
