[package]
name = "coreos-metadata"
version = "1.0.6"
authors = ["Stephen Demos <stephen.demos@coreos.com>"]

[[bin]]
name = "coreos-metadata"
path = "src/bin/coreos-metadata.rs"

[dependencies]
base64 = "0.6"
byteorder = "1.1"
clippy = { version = "*", optional = true }
error-chain = { version = "0.11", default-features = false }
hostname = "0.1"
hyper = "0.11"
ipnetwork = "0.12"
mime = "0.3"
nix = "0.9"
openssh-keys = "0.2"
openssl = "0.9.17"
pnet = "0.21"
reqwest = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.2"
slog-async = "2.1"
slog-scope = "4.0"
slog-term = "2.2"
structopt = "0.2"
tempdir = "0.3"
update-ssh-keys = { git = "https://github.com/coreos/update-ssh-keys", tag = "v0.1.2" }
users = "0.6"

[dependencies.slog]
version = "2.0"
features = ["max_level_trace", "release_max_level_info"]

[dev-dependencies]
mockito = "0.9"

[features]
default = []
lints = ["clippy"]
